[gd_scene load_steps=27 format=2]

[ext_resource path="res://main/Personajes/PersonajeBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/enemies/Cultist.png" type="Texture" id=2]
[ext_resource path="res://main/libs/HSM/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://main/Componentes/LOSCheck.gd" type="Script" id=4]
[ext_resource path="res://main/Personajes/Cultista/Patrullar.gd" type="Script" id=5]
[ext_resource path="res://main/Personajes/Cultista/Perseguir.gd" type="Script" id=6]
[ext_resource path="res://main/SistemaDa√±o/Hurtbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://main/Componentes/ControladorArmasNPC.gd" type="Script" id=8]
[ext_resource path="res://main/libs/DebugMonitor/DebugMonitor.tscn" type="PackedScene" id=9]
[ext_resource path="res://main/Personajes/Cultista/Disparar.gd" type="Script" id=10]
[ext_resource path="res://main/Personajes/Cultista/Muerte.gd" type="Script" id=11]
[ext_resource path="res://main/Personajes/Cultista/ScriptSetFrame.gd" type="Script" id=12]
[ext_resource path="res://main/Personajes/Cultista/Cultista.gd" type="Script" id=13]
[ext_resource path="res://main/Personajes/Cultista/ScripIdle.gd" type="Script" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 8.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 9 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "caer"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 35, 36 ]
}

[sub_resource type="Animation" id=9]
resource_name = "caminar"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=5]
resource_name = "correr"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14 ]
}

[sub_resource type="Animation" id=12]
resource_name = "hurt"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 25, 26 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=10]
resource_name = "mirar"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=11]
resource_name = "mirar_der"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "saltar"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.101 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 30, 26, 31 ]
}

[sub_resource type="Animation" id=6]
resource_name = "turn"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "turning", false ],
"method": "set"
} ]
}

[node name="Cultista" instance=ExtResource( 1 )]
collision_layer = 4
script = ExtResource( 13 )
skin = NodePath("Skin")
skin_sprite_path = NodePath("Skin/Sprite")
aceleracion = 6.0
friccion = 0.8
max_velocidad_horizontal = 75.0
max_velocidad_vertical = 400.0
jump_time_to_peak = 0.6
jump_time_to_fall = 0.6
arma = NodePath("ControladorArmasNPC")
fsm = NodePath("StateMachine")
hurtbox = NodePath("Hurtbox")
arma_id = "ArmaCultista"

[node name="monitores" type="Node2D" parent="." index="0"]

[node name="piso" parent="monitores" index="0" instance=ExtResource( 9 )]
monitor_target_node = NodePath("../..")
monitor_target_property = "is_on_floor"
monitor_flavor_text = "is_on_floor"

[node name="estado" parent="monitores" index="1" instance=ExtResource( 9 )]
position = Vector2( 0, -46 )
monitor_target_node = NodePath("../../StateMachine")
monitor_target_property = "_state_name"
monitor_flavor_text = "state_name"

[node name="input_disparar" parent="monitores" index="2" instance=ExtResource( 9 )]
position = Vector2( 0, -56 )
monitor_target_node = NodePath("../../ControladorArmasNPC")
monitor_target_property = "input_disparar"
monitor_flavor_text = "input_disparar"

[node name="ControladorArmasNPC" type="Node2D" parent="." index="1"]
position = Vector2( 0, -9 )
z_index = 2
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]
visible = false
position = Vector2( 0, -8.5 )
shape = SubResource( 1 )

[node name="Status" parent="." index="3"]
hp_max = 100
stun_threshold = 100

[node name="Hurtbox" parent="." index="4" instance=ExtResource( 7 )]
collision_mask = 16
agente_dir = NodePath("..")
is_constant = true
dmg = 5
fuerza_retroceso = 100.0
dmg_tipo = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -9 )
shape = SubResource( 2 )

[node name="Hitbox" parent="." index="5"]
visible = false

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -10 )

[node name="LOSCheckDisparo" type="Area2D" parent="." index="6"]
position = Vector2( 0, -10 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 4 )
radio = 180.0
mascara_colision = 2

[node name="StateMachine" type="Node" parent="." index="7"]
script = ExtResource( 3 )
initial_state = NodePath("Patrullar")

[node name="Patrullar" type="Node" parent="StateMachine" index="0"]
script = ExtResource( 5 )

[node name="Perseguir" type="Node" parent="StateMachine" index="1"]
script = ExtResource( 6 )
los_check = NodePath("../../LOSCheckDisparo")

[node name="Disparar" type="Node" parent="StateMachine" index="2"]
script = ExtResource( 10 )
controlador_armas = NodePath("../../ControladorArmasNPC")
rafaga = 4

[node name="Muerte" type="Node" parent="StateMachine" index="3"]
script = ExtResource( 11 )

[node name="ScriptSetFrame" type="Node" parent="StateMachine" index="4"]
script = ExtResource( 12 )
sprite = NodePath("../../Skin/Sprite")

[node name="ScriptIdle" type="Node" parent="StateMachine" index="5"]
script = ExtResource( 14 )

[node name="Skin" type="Node2D" parent="." index="8"]

[node name="Sprite" type="Sprite" parent="Skin" index="0"]
position = Vector2( 0, -10 )
texture = ExtResource( 2 )
offset = Vector2( 0, -1 )
hframes = 5
vframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="Skin" index="1"]
anims/RESET = SubResource( 3 )
anims/caer = SubResource( 8 )
anims/caminar = SubResource( 9 )
anims/correr = SubResource( 5 )
anims/hurt = SubResource( 12 )
anims/idle = SubResource( 4 )
anims/mirar = SubResource( 10 )
anims/mirar_der = SubResource( 11 )
anims/saltar = SubResource( 7 )
anims/turn = SubResource( 6 )
